wip: add dev and prd env for vue sfc and scss

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 <div id="app">
     this is Yui APP
     <div @click="showToast">show toast</div>
+    <y-switch></y-switch>
 </div>
 </body>
 <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script>
-    Vue.use(YuiYui.Toast);
+    Vue.use(Yuiyui.Switch);
 
     var vm = new Vue({
         el: '#app',
